# DeepSeek-TUI

./: .cnb.yml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  HANDOFF_v0.8.51.md  README.ja-JP.md  README.ko-KR.md  README.md  README.vi.md  README.zh-CN.md  SECURITY.md  config.example.toml  flake.nix  package-lock.json  package.json
.codewhale/: constitution.json  instructions.md
.devcontainer/: devcontainer.json
.github/: AUTHOR_MAP  FUNDING.yml
.github/ISSUE_TEMPLATE/: agent-task.yml  bug_report.md  feature_request.md
.github/scripts/: update-homebrew-tap.sh
.github/workflows/: auto-tag.yml  ci.yml  claude-review.yml  issue-gate.yml  nightly.yml  pr-gate.yml  release.yml  sync-cnb.yml
benchmark_results/: deepseek-anthropic-comparison-2026-06-24.md
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs
crates/app-server/: Cargo.toml
crates/app-server/src/: chat_completions.rs  lib.rs  main.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs  update.rs
crates/config/: Cargo.toml
crates/config/assets/: models_dev.bundled.json
crates/config/src/: catalog.rs  harness.rs  lib.rs  model_reference.rs  models_dev.rs  pricing.rs  provider.rs  provider_defaults.rs  provider_kind.rs  tests.rs
crates/config/src/route/: resolver.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/execpolicy/: Cargo.toml
crates/execpolicy/src/: bash_arity.rs  lib.rs
crates/hooks/: Cargo.toml
crates/hooks/src/: lib.rs
crates/mcp/: Cargo.toml
crates/protocol/: Cargo.toml
crates/protocol/src/: fleet.rs  workroom.rs
crates/protocol/tests/: parity_protocol.rs
crates/release/: Cargo.toml
crates/release/src/: lib.rs
crates/secrets/: Cargo.toml
crates/secrets/src/: lib.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs
crates/state/tests/: parity_state.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs
crates/tools/tests/: parity_tools.rs
crates/tui/: CHANGELOG.md  Cargo.toml  build.rs
crates/tui/locales/: en.json  es-419.json  ja.json  pt-BR.json  vi.json  zh-Hans.json  zh-Hant.json
crates/tui/src/: acp_server.rs  artifacts.rs  automation_manager.rs  client.rs  command_safety.rs  compaction.rs  composer_history.rs  composer_stash.rs  config.rs  config_persistence.rs  config_ui.rs  context_report.rs  cycle_manager.rs  dependencies.rs  features.rs  hooks.rs  localization.rs  logging.rs  main.rs  mcp.rs  memory.rs  model_catalog.rs  model_inventory.rs  model_registry.rs  model_routing.rs  prefix_cache.rs  pricing.rs  project_context.rs  project_context_cache.rs  project_doc.rs  prompts.rs  request_tuning.rs  resource_telemetry.rs  route_budget.rs  route_runtime.rs  runtime_api.rs  runtime_log.rs  runtime_mobile.html  runtime_threads.rs  session_manager.rs  (+10 more)
crates/tui/tests/: qa_pty.rs  (+9 more)
crates/whaleflow/: Cargo.toml
docs/: ACCESSIBILITY.md  ACP_REGISTRY_SUBMISSION.md  AGENT_ETHOS.md  AGENT_RUNTIME.md  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG_ARCHIVE.md  CLASSROOM_INSTALL.md  CLAUDE_PLUGIN_COMPAT.md  CNB_MIRROR.md  CODEBASE_SEARCH_DESIGN.md  CONFIGURATION.md  CONTRIBUTORS.md  DOCKER.md  FLEET.md  GUIDE.md  HarmonyOS.md  INSTALL.md  ISSUE_TRIAGE.md  KEYBINDINGS.md  LEGACY_PATHS.md  LSP_PHP_CUSTOM.md  LSP_PHP_CUSTOM.zh-CN.md  MCP.md  MEMORY.md  MIMO_BENCHMARK_ISSUES.md  MODEL_LAB.md  MODES.md  OPERATIONS_RUNBOOK.md  PROVIDERS.md  REBRAND.md  RECEIPTS.md  RECURSIVE_SELF_IMPROVEMENT.md  RELEASE_CHECKLIST.md  RELEASE_RUNBOOK.md  REMOTE_SETUP_DESIGN.md  REMOTE_VM_US.md  REVIEW_PIPELINE.md  RLM_BRANCHING_ROADMAP.md  RUNTIME_API.md  (+18 more)
docs/architecture/: command-dispatch.md  pr-issue-evidence-prep.md
docs/evidence/: hotbar-qa-matrix.md  terminal-visual-regression-matrix.md
docs/examples/: Dockerfile.toolbox  compose.toolbox.yml  fleet-dogfood.toml
docs/rfcs/: 1364-hooks-lifecycle.md  2189-persistence-sqlite.md  2190-mcp-modularization.md  2574-provider-fallback-chain.md  3209-workrooms.md  HARNESS_PROFILE_CUTLINE.md  ORCHESTRATION_AND_FLEET.md  REMOTE_SETUP_DESIGN.md  WHALEFLOW_EXTERNAL_MEMORY.md
docs/skills/: README.md
extensions/vscode/: README.md  package-lock.json  package.json
integrations/bridge-core/: package.json
integrations/feishu-bridge/: .env.example  README.md  package-lock.json  package.json
integrations/telegram-bridge/: .env.example  README.md  package-lock.json  package.json
integrations/wecom-bridge/: .env.example  DEPLOYMENT.md  README.md  package-lock.json  package.json
integrations/weixin-bridge/: .env.example  README.md  package.json
nix/: package.nix
npm/codewhale/: README.md  package.json
npm/deepseek-tui/: README.md  package-lock.json  package.json
npm/runtime-sdk/: README.md  package.json
scripts/: measure-tool-catalog.py  mobile-smoke.sh  sync-changelog.sh  verify_task.sh
scripts/benchmarks/: README.md  pinchbench_codewhale.py  run-pinchbench.sh  run-swebench.sh  run-terminal-bench.sh
scripts/installer/: codewhale.nsi
scripts/release/: app-server-smoke.sh  app-server-smoke.test.sh  branch-hygiene.sh  check-ohos-deps.sh  check-published.sh  check-versions.sh  crates.sh  generate-release-body.sh  install.bat  install.sh  npm-wrapper-smoke.js  prepare-local-release-assets.js  prepare-release.sh  publish-crates.sh  verify-release-assets.sh
scripts/remote-smoke/: README.md  agent-session.sh  setup-vm.sh
scripts/tencent-lighthouse/: bootstrap-ubuntu.sh  doctor.sh  install-services.sh
web/: .env.example  README.md  package-lock.json  package.json  wrangler.jsonc
web/app/: layout.tsx  opengraph-image.tsx
web/components/: footer.tsx  install-binary.tsx  install-download-tile.tsx  nav.tsx  thinking-trace.tsx
web/lib/: community-agent-tasks.ts  community-agent.ts  content-watch.ts  deepseek.ts  docs-map.ts  facts-drift.ts  github.test.ts  github.ts  page-meta.ts  release-credits.ts  roadmap-feed.ts  static-installer.test.ts
web/public/: install.sh
web/redirect/: wrangler.jsonc
web/scripts/: check-docs.mjs  derive-facts.mjs  facts-lib.mjs
website/: index.html
website/zh/: index.html
workflows/: rlm_cache_change.star
(+250 files in other folders)
