[package]
name = "deepseek-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Agentic terminal facade for open-source and open-weight coding models"

[[bin]]
name = "deepseek"
path = "src/main.rs"

# Short-form convenience alias — forwards to `deepseek` silently.
[[bin]]
name = "codew"
path = "src/bin/codew_legacy_shim.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
deepseek-agent = { path = "../agent", version = "0.8.54" }
deepseek-app-server = { path = "../app-server", version = "0.8.54" }
deepseek-config = { path = "../config", version = "0.8.54" }
deepseek-execpolicy = { path = "../execpolicy", version = "0.8.54" }
deepseek-mcp = { path = "../mcp", version = "0.8.54" }
deepseek-release = { path = "../release", version = "0.8.54" }
deepseek-secrets = { path = "../secrets", version = "0.8.54" }
deepseek-state = { path = "../state", version = "0.8.54" }
chrono.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
rustls.workspace = true
semver.workspace = true
tokio.workspace = true
sha2.workspace = true
tempfile = "3.16"
tracing.workspace = true

[dev-dependencies]
